--- a/funpage.html
+++ b/funpage.html
@@ -5,9 +5,9 @@
     </head>
     <header>Ryan Kim
     <br/>
-        <br/><a href="https://website-lolizupi.c9users.io/home.html">Home</a>
-        <a href="https://website-lolizupi.c9users.io/aboutme.html">About Me</a>
-        <a href="https://0website-lolizupi.c9users.io/resume.html">Resume</a></header>
+        <br/><a href="zup613.github.io/home.html">Home</a>
+        <a href="zup613.github.io/aboutme.html">About Me</a>
+        <a href="zup613.github.io/resume.html">Resume</a></header>
         <body>
             <h1>Fun Page</h1>
             <p></p>
