--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,9 @@
     </head>
     <header>Ryan Kim
     <br/>
-        <br /><a href="https://website-lolizupi.c9users.io/home.html">Home</a>
-        <a href="https://website-lolizupi.c9users.io/aboutme.html">About Me</a>
-        <a href="https://website-lolizupi.c9users.io/funpage.html">Fun Page</a></header>
+        <br /><a href="zup613.github.io/home.html">Home</a>
+        <a href="zup613.github.io/aboutme.html">About Me</a>
+        <a href="zup613.github.io/funpage.html">Fun Page</a></header>
         <body>
             <h1>Resume</h1>
             <h2>Education</h2>
