--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,10 @@
     </head>
     <header>Ryan Kim
     <br/>
-        <br /><a href="zup613.github.io/home.html">Home</a>
-        <a href="zup613.github.io/resume.html">Resume</a>
-        <a href="zup613.github.io/funpage.html">Fun Page</a>
+        <br />
+        <a href="home.html">Home</a>
+        <a href="resume.html">Resume</a>
+        <a href="funpage.html">Fun Page</a>
     </header>
         <body>
             <h1>About Me</h1>
