--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <header>Ryan Kim
   <br/>
-  <br /><a href="zup613.github.io/aboutme.html">About me</a>
+  <br /><a href="aboutme.html">About me</a>
   
-  <a href="zup613.github.io/resume.html">Resume</a>
+  <a href="resume.html">Resume</a>
   
-  <a href="zup613.github.io/funpage.html">Fun Page</a>
+  <a href="funpage.html">Fun Page</a>
   </header>
   <body>
     <h1>Ryan Kim</h1>
